fix height problems and overflows
mostly in the character section (text overflow) and in the art style section (text overflow and varying heights, ill arranged border alignments)

--- a/non-non-biyori/app.css
+++ b/non-non-biyori/app.css
@@ -1,3 +1,5 @@
+
+
 #title{
 	text-align: center;
 }
@@ -12,7 +14,19 @@
 	text-align: center;
 	padding: 50px;
 	background-color: #f5f5f5;
-	height: 75vh;
+	
+}
+
+
+.perk_body{
+	border: solid 2px #00ace6;
+	padding: 20px;
+	font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+#perk_title{
+	font-family: Sofia, "Comic Sans MS", cursive, sans-serif;
+
 
 }
 
@@ -28,7 +42,7 @@
 	background-color: #f5f7f9;
 	color: #555555;
 	border-bottom: solid 2px #ddd;
-	height: 50vh;
+	
 	width: 100%;
 }
 
@@ -37,7 +51,7 @@
 	background-color: #eaecee;
 	color: #555555;
 	border-bottom: solid 2px #ddd;
-	height: 50vh;
+	
 	width: 100%;
 }
 
@@ -226,18 +240,6 @@ th {
 	font-weight: 400;
 	color: #fafafa;
 	font-family: Alex Brush;
-}
-
-#perk_body{
-	border: solid 2px #00ace6;
-	height: 50vh;
-	font-family: "Comic Sans MS", cursive, sans-serif;
-}
-
-#perk_title{
-	font-family: Sofia, "Comic Sans MS", cursive, sans-serif;
-
-
 }
 
 #banner{
